<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:id="@+id/sexy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="right"
            android:text="@string/app_name"
            android:textSize="60dp"
            />
    <TextView
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight  ="5dp"
            android:layout_marginTop="-15dp"
            android:gravity="right"
            android:text="@string/app_description"
            android:textSize="15dp"
            />
    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_area"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_area"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_length"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_length"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_volume"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_volume"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_mass"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_mass"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_number_system"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_number_system"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_temperature"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_temperature"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>
    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_speed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_speed"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>
    <Button xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_angle"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="10dp"
              android:textSize="22sp"
              android:text="@string/option_angle"
              android:textColor="@drawable/button_color"
              android:gravity="left"
              android:background="#0000"
              android:onClick="onAreaButtonClick">
    </Button>

</LinearLayout>