<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/orange_gradient">

    <TextView
            android:id="@+id/sexy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="right"
            android:text="@string/app_name"
            android:textSize="60dp"
            />
    <TextView
            android:id="@+id/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sexy"
            android:layout_marginRight="5dp"
            android:layout_marginTop="-15dp"
            android:gravity="right"
            android:text="@string/app_description"
            android:textSize="15dp"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/MainGrey"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/option_temperature"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:textSize="25sp"
              android:text="@string/option_temperature"
              android:gravity="center"
              android:background="#0000">
    </TextView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:textSize="15sp"
                  android:text="@string/from"
                >
        </TextView>
        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="15dp"
                  android:textSize="15sp"
                  android:hint="@string/select_unit"
                  android:textColorHint="@color/LightGrey"
                  android:inputType="text"
                  android:background="@null"
                >
        </EditText>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:paddingLeft="10dp"
                  android:textSize="15sp"
                  android:text="@string/to"
                >
        </TextView>
        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:paddingLeft="15dp"
                  android:textSize="15sp"
                  android:hint="@string/select_unit"
                  android:textColorHint="@color/LightGrey"
                  android:inputType="text"
                  android:background="@null"
                >
        </EditText>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="30dp"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/enter_amount"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:hint="@string/enter_amount"
                  android:textColorHint="@color/LightGrey2"
                  android:inputType="text"
                >
        </EditText>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/enter_amount_unit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:text="@string/unit"
                >
        </TextView>

    </LinearLayout>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/enter_amount_unit"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:textSize="70sp"
              android:layout_marginRight="45dp"
              android:textColor="@color/MainGrey"
              android:text="="
            >
    </TextView>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:orientation="horizontal">

        <EditText xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/result_amount"
                  android:layout_width="250dp"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:hint="@string/result_amount"
                  android:textColorHint="@color/LightGrey2"
                  android:inputType="text"
                  android:editable="false"
                >
        </EditText>
        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/result_amount_unit"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:textSize="20sp"
                  android:textColor="@color/black"
                  android:text="@string/unit"
                >
        </TextView>

    </LinearLayout>


</LinearLayout>